@@ -618,6 +618,35 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|testEmptyIntFieldMinMax
+specifier|public
+name|void
+name|testEmptyIntFieldMinMax
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertNull
+argument_list|(
+name|NumericUtils
+operator|.
+name|getMinInt
+argument_list|(
+name|EMPTY_TERMS
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|NumericUtils
+operator|.
+name|getMaxInt
+argument_list|(
+name|EMPTY_TERMS
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testIntFieldMinMax
 specifier|public
 name|void
@@ -768,7 +797,11 @@ argument_list|)
 decl_stmt|;
 name|assertEquals
 argument_list|(
+operator|new
+name|Integer
+argument_list|(
 name|minValue
+argument_list|)
 argument_list|,
 name|NumericUtils
 operator|.
@@ -780,7 +813,11 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
+operator|new
+name|Integer
+argument_list|(
 name|maxValue
+argument_list|)
 argument_list|,
 name|NumericUtils
 operator|.
@@ -804,6 +841,35 @@ name|dir
 operator|.
 name|close
 argument_list|()
+expr_stmt|;
+block|}
+DECL|method|testEmptyLongFieldMinMax
+specifier|public
+name|void
+name|testEmptyLongFieldMinMax
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertNull
+argument_list|(
+name|NumericUtils
+operator|.
+name|getMinLong
+argument_list|(
+name|EMPTY_TERMS
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|NumericUtils
+operator|.
+name|getMaxLong
+argument_list|(
+name|EMPTY_TERMS
+argument_list|)
+argument_list|)
 expr_stmt|;
 block|}
 DECL|method|testLongFieldMinMax
@@ -956,7 +1022,11 @@ argument_list|)
 decl_stmt|;
 name|assertEquals
 argument_list|(
+operator|new
+name|Long
+argument_list|(
 name|minValue
+argument_list|)
 argument_list|,
 name|NumericUtils
 operator|.
@@ -968,7 +1038,11 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
+operator|new
+name|Long
+argument_list|(
 name|maxValue
+argument_list|)
 argument_list|,
 name|NumericUtils
 operator|.
@@ -1398,6 +1472,106 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+comment|/**    * A complete empty Terms instance that has no terms in it and supports no optional statistics    */
+DECL|field|EMPTY_TERMS
+specifier|private
+specifier|static
+name|Terms
+name|EMPTY_TERMS
+init|=
+operator|new
+name|Terms
+argument_list|()
+block|{
+specifier|public
+name|TermsEnum
+name|iterator
+parameter_list|()
+block|{
+return|return
+name|TermsEnum
+operator|.
+name|EMPTY
+return|;
+block|}
+specifier|public
+name|long
+name|size
+parameter_list|()
+block|{
+return|return
+operator|-
+literal|1
+return|;
+block|}
+specifier|public
+name|long
+name|getSumTotalTermFreq
+parameter_list|()
+block|{
+return|return
+operator|-
+literal|1
+return|;
+block|}
+specifier|public
+name|long
+name|getSumDocFreq
+parameter_list|()
+block|{
+return|return
+operator|-
+literal|1
+return|;
+block|}
+specifier|public
+name|int
+name|getDocCount
+parameter_list|()
+block|{
+return|return
+operator|-
+literal|1
+return|;
+block|}
+specifier|public
+name|boolean
+name|hasFreqs
+parameter_list|()
+block|{
+return|return
+literal|false
+return|;
+block|}
+specifier|public
+name|boolean
+name|hasOffsets
+parameter_list|()
+block|{
+return|return
+literal|false
+return|;
+block|}
+specifier|public
+name|boolean
+name|hasPositions
+parameter_list|()
+block|{
+return|return
+literal|false
+return|;
+block|}
+specifier|public
+name|boolean
+name|hasPayloads
+parameter_list|()
+block|{
+return|return
+literal|false
+return|;
+block|}
+block|}
+decl_stmt|;
 block|}
 end_class
 end_unit
